log/build_2025-11-30_21-42-51/mrta_simulation/stderr.log
  File "/home/sohamk3901/mrta_ws/install/mrta_simulation/lib/python3.12/site-packages/mrta_simulation/manual_task_commander.py", line 52
    self.get_logger().info(f'Loaded {len(self.robots)} robots and {len{self.tasks}} tasks')
                                                                   ^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

  File "/home/sohamk3901/mrta_ws/install/mrta_simulation/lib/python3.12/site-packages/mrta_simulation/potential_field_controller.py", line 120
    def create_twist_msg(self, velocity_2d, is_aerial=False)
                                                            ^
SyntaxError: expected ':'

